css/style.css
/* ... */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

.prev:hover,
.next:hover {
  color: var(--linkcolor);
}

#dots {
  text-align: center;
}

#dots .active {
  background-color: var(--linkcolor);
}

.dot {
  cursor: pointer;
  height: 1.2em;
  width: 1.2em;
  margin: 0 2px;
  background-color: var(--txtcolor);
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
  overflow: hidden;
  text-indent: -999em;
  border: 0;
}
.dot:hover {
  background-color: var(--linkcolor);
}

.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {
    opacity: .4
  }

  to {
    opacity: 1
  }
}

/*******************
    SERVICE LIST
********************/

#serviceList {
  display: flex;
  list-style: none;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0;
}

#serviceList li {
  text-align: center;
  flex: 0 1 300px; /*no grow*/
  margin: 1em;
  padding: .5em;
  border-radius: 2em;
  background-color: var(--cardbg);
}

#serviceList li h3 { /*eredito h2 sono già centrato comunque allineo tutto nell'#serviceList li al centro*/
  font-size: var(--txtsize);
  margin-bottom: .7em;
  margin: .7em 0.5em .7em;
  text-align: center;
}

#serviceList li p {
  margin: .5em .5em;
  text-align: left;
  font-size: small;
}

/*******************
    Partner List
********************/

#partnerCards{
  position: relative; /*perchè i bottoni prendano come riferimento per absolute la posizione del box padre*/
}

#partnerCards .prev,
#partnerCards .next { /*eredito e sovrascrivo bottoni next e prev*/
  top: 50%;
  width: 44px; /*per accessibilità*/
  height: 44px;
  margin-top: -1em;
  margin-left: 1em; /*non va più bene quando la 80vw < 1024px, contenitore riscala e frecce no perchè passa da riferimento body 1024px a 1em dal bordo*/
  margin-right: 1em;
  font-size: 1em;
  padding: 0em;
  color: var(--txtcolor);
  border-radius: 22px;
  background: none;
  transition: none;
}

#partnerCards .prev:hover,
#partnerCards .next:hover {
  background-color: var(--bodybgcolor);
  color: var(--linkcolor);
}

#partnerList {
  display: flex;
  justify-content: flex-start;
  margin: auto;
  max-width: 1024px; /*80% della larghezza del viewport per "bellezza" sono interessato solo alla card centrale, quindi non mi interessa il limite 1024px*/
  overflow: hidden;
}

@media screen and (max-width: 1024px) { /*se la larghezza è minore di 1024px riscalo la larghezza delle card per evitare facciano schifo*/
  #partnerList {
    max-width: 90vw;
  }

  #partnerCards .prev,
  #partnerCards .next {
    margin-left: 6vw;
    margin-right: 6vw;
  }
}

#partnerList li {
  list-style: none;
  display: block;
  position: relative; /*mi permette di spostare gli li all'interno del flexbox*/
  left: calc(50% - 165px); /*per centrare la card nello schermo*/
  /*transform: translate(-390px);/**/
  height: 330px;
  margin-left: 60px; /*margini in px per sapere le distanze di cui traslare in js*/
  margin-top: .7em;
  margin-bottom: .7em;
  color: var(--txtcolor);
  background-color: var(--cardbg);
  border-radius: 1em;
}

#partnerList li:first-child {
  margin-left: 0;
}

#partnerList .cardLogo {
  background-color: var(--cardLogobg);
  border-radius: 1em 1em 0 0;
}

#partnerList a {
  display: block;
  margin: auto; /*overwrite margini di default*/
  width: 330px;
  height: 60px;
  overflow: hidden;
  text-indent: -9999px;
  font-size: 1px;
}

#partnerList p {
  text-align: justify;
  margin: 1em;
  font-size: .85em;
}

#partnerList p::before{
  content: "\201C";
}

#partnerList p::after{
  content: "\201D";
}

#partnerList .partnerCard a { /*dovuto incrementare specificità per overwrite*/
  background-size: contain;
  background-position: center;
  max-width: 90%;
  max-height: 90%;
}

#partner1 a {
  background: url(../img/partners/ksenia_logo.png) no-repeat center;
}

#partner2 a {
  background: url(../img/partners/hesa_logo.png) no-repeat center;
}

#partner3 a {
  background: url(../img/partners/hikvision_logo.svg) no-repeat center;
}

#partner4 a {
  background: url(../img/partners/microtik_logo.svg) no-repeat center;
}

#partner5 a {
  background: url(../img/partners/solarEdge_logo.svg) no-repeat center;
}

#partner6 a {
  background: url(../img/partners/ditec_logo.svg) no-repeat center;
}

#partner7 a {
  background: url(../img/partners/fronius_logo.png) no-repeat center;
}

#partner8 a {
  background: url(../img/partners/carrier_logo.svg) no-repeat center;
}

#partner9 a {
  background: url(../img/partners/cambium_networks.svg) no-repeat center;
}

/*******************
    BACK TO TOP
********************/
#toTop {
  display: none;
  font-size: 1.6em;
  font-weight: bold;
  color: var(--bodybgcolor);
  background-color: var(--linkcolor);
  width: 50px;
  height: 50px;
  border-radius: 15px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  position: fixed;
  bottom: 50px;
  right: 50px;
  transition: background-color .3s, opacity .5s, visibility .5s;
  z-index: 1000;
}

#toTop span {
  display: block;
  font-size: 1px;
  text-indent: -9999em;
}

#toTop::after {
  content: "\21EA";
  position: relative;
  left: -1px;
}

#toTop:hover {
  cursor: pointer;
  border: 3px solid var(--txtcolor);
}

/*******************
       FOOTER
********************/


footer { /*footer fatto con flex per semplicità di riscalatura*/
  margin-top: 1em;
  padding-top: 1.5em;
  padding-bottom: 1.5em;
  display: flex;
  flex-direction: row;
  justify-content: center;
  text-align: center;
  font-size: var(--footertxtsize);
  align-items: center;
  flex-wrap: wrap;
  background-color: var(--footerbg);
}

#contactsOnFooter {
  flex: 1 1;
  padding: 1em;
  min-width: 220px;
}

#contactsOnFooter li {
  list-style: none;
}

#contactsOnFooter ul li span {
  display: inline-block;
  padding-top: 2em;
}

/*******************
       TABLE
********************/

table{
  border-collapse: collapse;
  border-radius: 1em;
}
/* ... */

